name:                sdf
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable sdf
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, Template, E, Share, Compile, Lib, Transform, BinOp, Grid, Prim, Random, Funs, Server, Color,
                       Infinity, Single, Alg, Interactive, Typed
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     -- , contravariant
                     , criterion
                     , deepseq
                     , hashable
                     , http-types
                     , firefly
                     -- , directory
                     -- , cryptohash-md5
                     , mtl
                     , MonadRandom
                     , pretty-simple
                     , random
                     , text
                     , time
                     , unordered-containers
                     , wai
